# TarsProtocol

./: .gitignore  Contributing.md  README.md
.github/workflows/: gitee-sync.yml
docs/: tars_protocol.md
docs-en/: tars_protocol.md
framework/: AdminReg.tars  CMakeLists.txt  MonitorQuery.tars  Node.tars  NodeDescriptor.tars  NodePush.tars  Patch.tars  Registry.tars  RegistryDescriptor.tars
servant/: AdminF.tars  AuthF.tars  BaseF.tars  CMakeLists.txt  EndpointF.tars  NodeF.tars  NotifyF.tars  QueryF.tars  QueryPushF.tars
